main/default/objects/Survey_Response__c/fields/Account_Insights__c.field-meta.xml
<CustomField>
    <fullName>Account_Insights__c</fullName>
    <formula>Event__r.Campaign__r.Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account (Insights)</label>
    <type>Text</type>
</CustomField>