main/default/objects/Survey_Response__c/fields/Campaign_Insights__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Insights__c</fullName>
    <formula>Event__r.Campaign__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign (Insights)</label>
    <type>Text</type>
</CustomField>