main/default/objects/Survey_Response__c/fields/Date_of_Session__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Session__c</fullName>
    <label>Date of Session</label>
    <type>Date</type>
</CustomField>