main/default/objects/Survey_Response__c/fields/External_Session_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Session_Name__c</fullName>
    <label>External Session Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>