main/default/objects/Survey_Response__c/fields/Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name__c</fullName>
    <label>Participant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>