main/default/objects/Survey_Response__c/fields/Participant_Role__c.field-meta.xml
<CustomField>
    <fullName>Participant_Role__c</fullName>
    <label>Participant Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>