main/default/objects/Survey_Response__c/fields/Response_Number__c.field-meta.xml
<CustomField>
    <fullName>Response_Number__c</fullName>
    <label>Response Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>