main/default/objects/Survey_Response__c/fields/Session_Insights__c.field-meta.xml
<CustomField>
    <fullName>Session_Insights__c</fullName>
    <formula>IF(Session__c != null,  Session__r.Name,  External_Session_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session (Insights)</label>
    <type>Text</type>
</CustomField>