main/default/objects/Survey_Response__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <length>90</length>
    <type>Text</type>
</CustomField>